/*
 * $Id: ChangeLog,v 1.4274 2005/08/28 19:28:42 walito Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-08-29 10:16 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  *  source/vm/hvm.c
     ! Fixed 2 minor bugs in hb_vmSend() related to Hash method calls
       using Hash:Method( <params> ) syntax

2005-08-28 16:30 UTC-0300 Walter Negro <anegro-AT-overnet.com.ar>
  * source/vm/hbserv.c
  * source/vm/hvm.c
    * Modification to avoid link hbverv code allways.
  * source/vm/eval.c
    ! Fix bug calling hb_execarray() with array and codeblock.
  * source/vm/asort.c
    ! Lock pivot item.

2005-08-25 09:00 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * tests/testw32p.prg
    + added ( commented ) sample of TextOutFont() & MM_TOPOSX/Y()

2005-08-24 09:45 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/win32prn.prg
    + METHOD MM_TO_POSX( nMm )  Conversion methods from mm on page
    + METHOD MM_TO_POSY( nMm )  to col or row position.
    + METHOD INCH_TO_POSX( nInch ) Conversion methods from Inch on page
    + METHOD INCH_TO_POSY( nInch ) to col or row position.
    + METHOD TextAtFont()       Print at pos in specified font & color
    + METHOD SetBkMode( nMode ) Set background print mode
    - Remove xxxAPI() METHODS added in previous post

2005-08-23 12:40 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbapirdd.h
    * changed {SELF|SUPER}_RECNO( AREAP, PHB_ITEM ) to
      {SELF|SUPER}_RECNO( AREAP, ULONG *)
    + added {SELF|SUPER}_RECID( AREAP, PHB_ITEM )
    + added {SELF|SUPER}_LOCATE( AREAP, BOOL fContinue ) for
      LOCATE/CONTINUE implementation on RDD level - it allows to
      speedup these operation by RDD and resolve the problem with
      external FOUND flag update
    * changed {SELF|SUPER}_UNLOCK( AREAP, ULONG ) to