@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4274 2005/08/28 19:28:42 walito Exp $
+ * $Id: ChangeLog,v 1.4275 2005/08/29 17:17:03 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-08-29 11:03 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
+  * source/vm/classes.c
+    ! Corrected hb_objGetOpOver() to use hb_objClassH()
+  * source/vm/hvm.c
+    + Added support for operator overloading of native types.
+  * tests/associat.prg
+    + Added sample of operator overloading for numerics
 
 2005-08-29 10:16 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
   *  source/vm/hvm.c
